# Reindeer-Chopper

./: AGENTS.md  LICENSE  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: desktop-distribution.yml
docs/: harness-engineering.md
docs/plans/: 2026-03-11-script-executor-design.md  2026-03-11-script-executor-impl.md  2026-03-12-harness-mode-design.md  2026-03-12-harness-mode-impl.md  2026-03-12-hello-world-filepath-showcase-design.md  2026-03-12-hello-world-filepath-showcase-impl.md  2026-03-12-path-parameter-picker-design.md  2026-03-12-path-parameter-picker-impl.md  2026-03-12-playwright-screenshot-plugin-design.md  2026-03-12-playwright-screenshot-plugin-impl.md  2026-03-12-plugin-import-uninstall-terminal-resize-design.md  2026-03-12-plugin-import-uninstall-terminal-resize-impl.md  2026-03-12-runtime-platform-commands-design.md  2026-03-12-runtime-platform-commands-impl.md  2026-03-12-ui-wireframe-hardcore-design.md  2026-03-12-ui-wireframe-hardcore-impl.md  2026-03-12-uninstall-confirmation-modal-design.md  2026-03-12-uninstall-confirmation-modal-impl.md  2026-03-14-plugin-creator-skill-refresh-design.md  2026-03-14-plugin-creator-skill-refresh-impl.md  2026-03-14-select-support-and-style-design.md  2026-03-14-select-support-and-style-impl.md  2026-03-18-desktop-distribution-design.md  2026-03-18-desktop-distribution-impl.md  (+8 more)
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config_manager.rs  lib.rs  plugin_manager.rs  plugin_scanner.rs  pty_manager.rs
src/components/: ConfigBar.tsx  (+5 more)
(+25 files in other folders)
